syntax = "proto3";
package Lively.Grpc.Common.Proto.Commands;
import "google/protobuf/empty.proto";

service CommandsService {
  rpc ShowUI (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc CloseUI (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc RestartUI (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc ShowDebugger (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Screensaver (ScreensaverRequest) returns (google.protobuf.Empty);
  rpc ShutDown (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc AutomationCommand (AutomationCommandRequest) returns (google.protobuf.Empty);
  rpc SaveRectUI(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc RestartUIWithArgs(RestartRequest) returns (google.protobuf.Empty);
}

message ScreensaverRequest {
	ScreensaverState state = 1;
	int32 preview_hwnd = 2;
}

message AutomationCommandRequest {
	repeated string args = 1;
}

enum ScreensaverState {
	start = 0;
	stop = 1;
	preview = 2;
	configure = 3;
}

message RestartRequest {
	string start_args = 1;
}
